# iterated-dynamics

./: .astylerc  .clang-format  .editorconfig  .gitattributes  .gitignore  .mailmap  .travis.sh  .travis.yml  0.0.html  0.1.html  1.1.html  1.10.html  1.11.html  1.12.html  1.13.html  1.14.html  1.15.html  1.16.html  1.17.html  1.18.html  1.2.html  1.3.html  1.4.html  1.5.html  1.6.html  1.7.html  1.8.html  1.9.html  2.0.html  2.1.html  2.10.html  2.11.html  2.12.html  2.13.html  2.14.html  2.15.html  2.16.html  2.17.html  2.18.html  2.19.html  (+371 more)
algos/: CMakeLists.txt  string_algorithms.cpp
allegro/: 2003p02fx.dif  3d.c  Makefile  allegro.cfg  ant.c  bignum.c  calcfrac.c  calmanfp.c  calmanfx.asm  cmdfiles.c  configure.in  d_allegro.c  d_disk.c  d_fract.c  d_x11.c  decoder.c  diskvidu.c  drivers.c  drivers.h  editpal.c  encoder.c  evolve.c  externs.h  fpu087.c  fracfont.h  fracsubr.c  fract18.par  fract19.par  fractalp.c  fractals.c  fractint.c  fractint.frm  fractint.h  fractint.hlp  fractype.h  framain2.c  frasetup.c  general.c  gifview.c  hc.c  (+40 more)
config/: CMakeLists.txt  cmd_shell.comspec.cpp.in  cmd_shell.null.cpp.in  cmd_shell.shell.cpp.in  driver_types.cpp.in  driver_types.h.in  fdio.Linux.h.in  fdio.Windows.h.in  fdio.fcntl.h.in  fdio.io.h.in  fdio.linux.h.in  fdio.windows.h.in  filelength.Linux.h.in  filelength.io.h.in  filelength.stat.h.in  filelength.unistd.h.in  getpid.Windows.h.in  getpid.linux.h.in  getpid.process.h.in  getpid.unistd.h.in  getpid.windows.h.in  home_dir.h.in  path_limits.Linux.h.in  path_limits.Windows.h.in  path_limits.linux.h.in  path_limits.manual.h.in  path_limits.stdlib.h.in  path_limits.windows.h.in  port_config.h.in  string_case_compare.cpp  string_case_compare.linux.h.in  string_case_compare.windows.h.in  string_lower.Linux.h.in  string_lower.Windows.h.in  string_lower.cpp  string_lower.manual.h.in  string_lower.string.h.in  strlwr.Linux.h.in  strlwr.Windows.h.in  strlwr.cpp
config/include/: id_io.h  port.h  string_case_compare.h
config/tests/: CMakeLists.txt  (+1 more)
hc/: AsciiDocCompiler.cpp  AsciiDocCompiler.h  CMakeLists.txt  Compiler.cpp  Compiler.h  HTMLProcessor.cpp  HTMLProcessor.h  HelpCompiler.cpp  HelpCompiler.h  HelpSource.cpp  HelpSource.h  Options.cpp  Options.h  adoc_compiler.cpp  adoc_compiler.h  audit.md  compiler.cpp  compiler.h  fractint.doc  hc.cpp  hc_main.cpp  help.src  help2.src  help3.src  help4.src  help5.src  help_compiler.cpp  help_compiler.h  help_source.cpp  help_source.h  helpcom.cpp  html_processor.cpp  html_processor.h  messages.cpp  messages.h  modes.h  options.cpp  options.h  parse_compiler_options.cpp  parse_options.cpp
helpcom/: CMakeLists.txt  helpcom.cpp
home/: CMakeLists.txt  demo.bat  id-513e45a64-1.dmp  id-513e45a64.dmp  id.cfg  sstools.ini  stopmsg.txt
libid/: 3d.cpp  CMakeLists.txt  EngineGlobals.md  FractalGlobals.md  GlobalsIndex.md  PertEngine.cpp  UIGlobals.md  abort_msg.cpp  ant.cpp  bailout_formula.cpp  barnsley.cpp  bifurcation.cpp  bigflt.cpp  biginit.cpp  bignum.cpp  bignumc.cpp  boundary_trace.cpp  burning_ship.cpp  calc_frac_init.cpp  calcfrac.cpp  calcmand.cpp  calmanfp.cpp  cellular.cpp  check_key.cpp  check_orbit_name.cpp  check_write_file.cpp  circle_pattern.cpp  cmdfiles.cpp  comments.cpp  complex.cpp  complex_fn.cpp  convert_center_mag.cpp  convert_corners.cpp  debug_flags.cpp  decode_info.cpp  decoder.cpp  diffusion.cpp  diffusion_scan.cpp  dir_file.cpp  diskvid.cpp  (+170 more)
packaging/: Bundle.wxs  CMakeLists.txt  license.rtf  package_description.txt  patch.xml  shortcuts.xml  welcome.txt
tests/: CMakeLists.txt  ConfigureData.cmake  CurrentPathSaver.h  MockDriver.h  ValueUnchanged.h  current_path_saver.h  stub.cpp  test.cfg.in  test.ifs.in  test_ChoiceBuilder.cpp  test_ValueSaver.cpp  test_check_write_file.cpp  test_check_write_file_data.h.in  test_choice_builder.cpp  test_cmdfiles.cpp  test_cmplx.cpp  test_comments.cpp  test_config_data.h.in  test_data.h.in  test_expand_dirname.cpp  test_find_file.cpp  test_find_file.txt.in  test_find_path.cpp  test_fractalp.cpp  test_get_ifs_token.cpp  test_gif_file.cpp  test_is_directory.cpp  test_load_config.cpp  test_lowerize_parameter.cpp  test_main_menu_switch.cpp  test_make_path.cpp  test_math.cpp  test_math_lcmplx.cpp  test_merge_path_names.cpp  test_open_save_file.cpp  test_path_match.cpp  test_resume.cpp  test_save_file.cpp  test_search_path.cpp  test_split_path.cpp  (+5 more)
unix/: CMakeLists.txt  calcmand.c  d_x11.cpp  fpu087.c  general.cpp  general.h  init_failure.cpp  main.cpp  os_unix.c  os_unix.cpp  special_dirs.cpp  stack_avail.cpp  unix.cpp  unixscr.c  unixscr.cpp  unixscr.h  usec_clock.cpp  video.cpp  video.h  x11_frame.cpp  x11_frame.h  x11_plot.cpp  x11_plot.h  x11_text.cpp  x11_text.h  xfractint.man
win32/: CMakeLists.txt  DiskDriver.cpp  Frame.cpp  Frame.h  GDIDriver.cpp  Plot.cpp  Plot.h  Win32BaseDriver.cpp  Win32BaseDriver.h  WinText.c  WinText.cpp  WinText.h  app-manifest.xml  calcmand.c  calmanp5.c  calmanp5.cpp  create_minidump.cpp  create_minidump.h  d_disk.cpp  d_gdi.cpp  d_win32.c  d_win32.cpp  d_win32.h  d_win32_disk.c  d_win32_disk.cpp  d_win32_gdi.c  d_win32_gdi.cpp  frame.c  frame.cpp  frame.h  id.rc  id.rc.in  init_failure.cpp  instance.cpp  instance.h  ods.cpp  ods.h  os_win32.cpp  os_win32.h  parsera.cpp  (+12 more)
wx/: App.cpp  CGATextWindow.h  CMakeLists.txt  DiskDriver.cpp  Frame.cpp  IdApp.cpp  IdApp.h  IdFrame.cpp  IdFrame.h  Plot.cpp  Plot.h  TextScreen.cpp  TextScreen.h  WxBaseDriver.cpp  WxBaseDriver.h  WxDiskDriver.cpp  WxDiskDriver.h  WxDriver.cpp  WxDriver.h  WxSpecialDirectories.cpp  app.cpp  cga_text_window.h  d_disk.cpp  d_wx.cpp  d_wx.h  frame.cpp  frame.h  id.rc.in  init_failure.cpp  read_ticker.cpp  resource.h  stack_avail.cpp  text_screen.cpp  win_main.cpp  wx_id.cpp  wx_id.h  wx_special_dirs.cpp  wx_special_dirs.h
x11/: CMakeLists.txt  X11BaseDriver.cpp  X11BaseDriver.h  X11Connection.cpp  X11DiskDriver.cpp  X11Driver.cpp  X11Frame.cpp  X11Frame.h  X11Plot.cpp  X11Plot.h  X11SpecialDirectories.cpp  X11SpecialDirectoriesLinux.cpp  X11SpecialDirectoriesMac.cpp  X11Text.cpp  X11Text.h  init_failure.cpp  x11_main.cpp
(+5784 files in other folders)
